# parachutes

./: .gitignore  .gitmodules  README.md  _typos.toml  alacritty.toml  alacritty.yml  angels_10.sh  angels_3.sh  angels_4.sh  angels_5.sh  angels_6.sh  angels_7.sh  angels_8.sh  angels_9.sh  config.rasi  config.toml  fcitx5_config  fcitx5_profile  flake.nix  fzf.zsh  gitconfig  gitconfig.gpg  gpg-agent.conf  key_config.ron  rime.default.yaml  shell.nix  take_off.sh  zshrc
.github/: dependabot.yml
.github/workflows/: lint.yml  test.yml
MyWM/: Cargo.toml  flake.nix  keycodes.md
MyWM/src/: bar.rs  keybinds.rs  lib.rs  main.rs
bar-rs/: bar-rs.ini
direnv/lib/: 0-log.sh  git.sh  pyvenv.sh
gitui/: key_bindings.ron  key_config.0.16.ron
leftwm/: config.ron
leftwm/themes/basic_polybar/: polybar.config  theme.ron
niri/: config.kdl
nix/scripts/: dump.sh  enable_ap.sh  varying_data.sh  varying_mtu.sh
nix/shells/: default.nix  middle.nix  nettest.nix
nixpkgs/: config.nix
nixpkgs/neovim/: default.nix  qt.nix  system_rplugin_manifest.patch  utils.nix  wrapper.nix
nixpkgs/neovim/gnvim/: wrapper.nix
nixpkgs/nix-folder2channel/: default.nix
nixpkgs/nvidia-xrun/: default.nix
nvim/: init.vim  nvim
opencode/: tui.json
swaylock/: config
template/: post-commit  pre-commit  prepare-commit-msg
waybar/: config  style.css
yazi/: keymap.toml
